@@ -1,3 +1,10 @@
+2007-06-07  Calvin Gaisford <calvinrg@gmail.com> 
+
+	* Banter/ConversationManager.cs: fixed the destroy method call
+	* Banter/ChatWindow.cs: called to destroy conversations when we close
+	  the video window
+	* Banter/Conversation.cs: added a check for the video stream
+
 2007-06-07  Brady Anderson <brady.anderson@gmail.com> 
 
 	
